umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_multiple-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 49
bond_count: 53
sum_formula: C36N3O6PS
graph6: phEK?C@OGC?@?@?O_@??@?@C?@???G??G?_?G?????????@???@????_???G???P????G????G????O???A?????@?????G????@???????????@??????_?????G?????@?????@C?????A???????G?????AC??????G??????@????????_??????@???????@
