umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_s-group-features.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 37
bond_count: 34
sum_formula: C34+1
graph6: dhCGGC@?G?_@????_?G?@??C??G??G??C??@???G???_??@????????_???G???@????C????G????G????C????@?????G?????_????@?????@
