umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_several-distorted-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 54
bond_count: 55
sum_formula: C54
graph6: uhCGGC@???_@?C?@?A??G?????G??G??C??@??AG??G???@???@???__??@????@????C???CG????O????C????@????@G??????????@?????@??????_?????G?????P?????@???????G??????G??????C??????H???????????????_??????@???????@????????_???????G???????@????????C????????G
