umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_sgroup-different-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 28
sum_formula: C29
graph6: "\\hCGGC@?G?_@?@??_?G?@??C?????G??C??@???G???_??????@??@?_?@?????@???@C"
