umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_structure-with-stereo-bonds-1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 36
sum_formula: C29H3O
graph6: "`kCGGC@?G?_@?@??_?G?@??C??O??G?C??c????G??@???@?O?@I???_???K??????@??????G???C?A?????_???"
