umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_ketcher_structure-with-stereo-bonds-3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 34
bond_count: 37
sum_formula: C22H2N2O8
graph6: ahEGGO@?g?_C?@?A_?G?C??C??k???C???G???G???G??G???_??G????A?????@????G???G????O?A????@??????A???
